# zed-clice

./: .gitignore  Cargo.toml  README.md  extension.toml  extension.wasm
src/: clice.rs
